--- a/styles/gamer-zone.css
+++ b/styles/gamer-zone.css
@@ -11,6 +11,10 @@ body {
   margin: 0 auto;
 }
 
+main{
+  padding:0 10px;
+}
+
 /* ================header styles================  */
 header {
   margin-top: 38px;
@@ -71,7 +75,7 @@ nav {
 .follow-us-txt {
 }
 
-.fa-youtube {
+.banner-content ul li i.fa-youtube {
   color: #f61c0d;
   margin: 0 10px;
 }
@@ -86,6 +90,7 @@ nav {
   align-items: center;
   margin-top: 70px;
   gap: 200px;
+  margin-bottom: 100px;
 }
 
 .banner-title {
@@ -118,7 +123,7 @@ nav {
 .banner-content-option-list li {
   margin-bottom: 17px;
 }
-.fa-play {
+.banner-content-option-list li i.fa-play {
   color: #ff42a5;
   border: solid 3px #000;
   padding: 8px;
@@ -157,7 +162,7 @@ nav {
   align-items: center;
   justify-content: space-between;
   gap: 70px;
-  margin-bottom:100px;
+  margin-bottom: 100px;
 }
 .gamer-image-container {
 }
@@ -210,6 +215,93 @@ nav {
   line-height: 45px;
 }
 
+/* =============Online games section styles=============  */
+.online-games {
+  margin-bottom: 100px;
+}
+
+.online-game-title {
+  color: #0b0223;
+  font-size: 48px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.funny-video {
+  background: linear-gradient(180deg, #f948b2 0%, #8758f1 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 48px;
+  font-weight: 700;
+}
+.online-game-description {
+  color: #534c64;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px; /* 166.667% */
+  margin-bottom: 48px;
+}
+
+.game-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 24px;
+}
+
+.game-item {
+  position: relative;
+}
+.game-item img {
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+}
+.game-item figcaption {
+  margin-top: 10px;
+  color: #534c64;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 30px; /* 150% */
+}
+
+.overlay {
+  width: 100%;
+  height: 75%;
+  border-radius: 15px;
+  position: absolute;
+  background: #000000d0;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.overlay-title {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 600;
+  background: var(--linear, linear-gradient(90deg, #ff42a5 0%, #ff42a5 100%));
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-top: 16px;
+}
+
+.overlay svg{
+  cursor: pointer;
+}
+
+.game-image-container:hover .overlay{
+  border:solid #ff42a5 3px;
+  opacity:1;
+}
+
+
+
 /* Responsive Styles  */
 /* Mobile Devices */
 @media screen and (max-width: 576px) {
@@ -260,16 +352,26 @@ nav {
   .banner-content-option-list {
     font-size: 16px;
   }
-  .gamer{
-    gap:10px;
-    margin-top:70px;
+
+  .gamer {
+    gap: 10px;
+    margin-top: 70px;
   }
-  .gamer-content{
+  .gamer-content {
     text-align: center;
   }
-  .gamer-button{
-    padding:18px 20px;
+  .gamer-button {
+    padding: 18px 20px;
     font-size: 15px;
+  }
+
+  .game-item figcaption{
+    margin-top:0;
+  }
+  .game-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 24px;
   }
 }
 
@@ -285,12 +387,22 @@ nav {
   .banner {
     gap: 80px;
   }
-  .gamer{
+  .gamer {
     flex-direction: column-reverse;
-    gap:20px;
-    margin-top:80px;
+    gap: 20px;
+    margin-top: 80px;
   }
-  .gamer-content{
+
+  .gamer-content {
     text-align: center;
+  }
+
+  .game-item figcaption{
+    margin-top:0;
+  }
+  .game-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
   }
 }
